@@ -35,6 +35,10 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-08-15 DP  1.6.0  Set focus on the filter textbox when opening the View
+                      data filter options [Guillaume Lelarge]
+2006-08-15 DP  1.6.0  Auto-select the next item when removing columns from 
+                      the View Data sort options dialog [Guillaume Lelarge]
 2006-07-21 DP  1.4.4  Fix custom vacuum settings editting, per Benjamin 
                       Krajmalnik
 2006-07-18 DP  1.4.3  Display job steps and schedules properly in the Job
